--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
     <developerConnection>scm:git:git@github.com:jenkinsci/ec2-slave-plugin.git</developerConnection>
   </scm>
 
+<repositories>
+    <repository>
+      <id>jenkins-plugin</id>
+      <url>http://maven.jenkins-ci.org/content/groups/artifacts/org/jenkins-ci/plugins/</url>
+    </repository>
+    <repository>
+      <id>jenkins</id>
+      <url>http://maven.jenkins-ci.org/content/groups/artifacts/</url>
+    </repository>
+ </repositories>
+
   <dependencies>
     <dependency>
     	<groupId>com.amazonaws</groupId>
